// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".class-1, .class-10 .bar-1 {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "bar-1": "_bar-1",
  "class-1": "_class-1",
  "class-10": "_class-10",
}
`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._class-1, ._class-10 ._bar-1 {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`class-names\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `Object {}`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "bar-1": "_bar-1",
  "class-1": "_class-1",
  "class-10": "_class-10",
}
`;

exports[`modules option case name \`class-names\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1/*.c2*/._c3 { background: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1/*.c2*/._c3 { background: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`comment-in-local\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules option case name \`comment-in-local\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "/*
 * a ' above
 */

.bg {
  background-image: url(/webpack/public/path/img.png);
}

/*
 * a ' below
 */
",
    "",
  ],
]
`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "bg": "_bg",
}
`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "/*
 * a ' above
 */

._bg {
  background-image: url(/webpack/public/path/img.png);
}

/*
 * a ' below
 */
",
    "",
  ],
]
`;

exports[`modules option case name \`comments\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `Object {}`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "bg": "_bg",
}
`;

exports[`modules option case name \`comments\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1 { a: 1; }
._c2 { b: 1; }
",
    "",
  ],
]
`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1 { a: 1; }
._c2 { b: 1; }
",
    "",
  ],
]
`;

exports[`modules option case name \`composes\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules option case name \`composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c2 {
  color: red;
}

._c4 {
  color: blue;
}

.test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c2 {
  color: red;
}

._c4 {
  color: blue;
}

._test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-1\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules option case name \`composes-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c-2 {
  color: red;
}

._c4 {
  color: blue;
}

.test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c-2 {
  color: red;
}

._c4 {
  color: blue;
}

._test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-2\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules option case name \`composes-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def1 {
  color: red;
}
",
    "",
  ],
  Array [
    3,
    "._def2 {
  color: blue;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def1 {
  color: red;
}
",
    "",
  ],
  Array [
    3,
    "._def2 {
  color: blue;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-multiple\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules option case name \`composes-multiple\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules option case name \`composes-with-importing\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules option case name \`composes-with-importing\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "blue": "red",
}
`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
  border: 1px solid red;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "a": "_a",
  "blue": "red",
}
`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
  border: 1px solid red;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`declaration-value\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "blue": "red",
}
`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "a": "_a",
  "blue": "red",
}
`;

exports[`modules option case name \`declaration-value\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	color: green;
}

@keyframes bounce {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

@-webkit-keyframes bounce2 {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

.bounce {
	animation-name: bounce;
	animation: bounce2 1s ease;
}

.bounce2 {
	color: green;
	animation: bounce 1s ease;
	animation-name: bounce2;
}

.bounce3 {
	animation: bounce 1s ease, bounce2
}

.bounce4 {
	animation: bounce 1s ease, bounce2;
}

.b {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "bounce": "_bounce",
  "bounce2": "_bounce2",
  "bounce3": "_bounce3",
  "bounce4": "_bounce4",
}
`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	color: green;
}

@keyframes _bounce {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

@-webkit-keyframes _bounce2 {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

._bounce {
	animation-name: _bounce;
	animation: _bounce2 1s ease;
}

._bounce2 {
	color: green;
	animation: _bounce 1s ease;
	animation-name: _bounce2;
}

._bounce3 {
	animation: _bounce 1s ease, _bounce2
}

._bounce4 {
	animation: _bounce 1s ease, _bounce2;
}

._b {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `Object {}`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "bounce": "_bounce",
  "bounce2": "_bounce2",
  "bounce3": "_bounce3",
  "bounce4": "_bounce4",
}
`;

exports[`modules option case name \`keyframes-and-animation\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	color: green;
	animation: a;
}

@keyframes b {
	0% { left: 10px; }
	100% { left: 20px; }
}

.b {
	animation: b;
}

@keyframes c {
	0% { left: 10px; }
	100% { left: 20px; }
}

.c {
	animation: c1;
	animation: c2, c3, c4;
}

@keyframes d {
	0% { left: 10px; }
	100% { left: 20px; }
}

.d1 {
	animation: d1;
	animation: d2, d3, d4;
}

.d2 {
	animation: d2;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c4": "_c4",
  "d2": "_d2",
}
`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	color: green;
	animation: _a;
}

@keyframes _b {
	0% { left: 10px; }
	100% { left: 20px; }
}

._b {
	animation: _b;
}

@keyframes c {
	0% { left: 10px; }
	100% { left: 20px; }
}

._c {
	animation: _c1;
	animation: _c2, _c3, _c4;
}

@keyframes d {
	0% { left: 10px; }
	100% { left: 20px; }
}

.d1 {
	animation: d1;
	animation: d2, d3, d4;
}

.d2 {
	animation: _d2;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`leak-scope\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `Object {}`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c4": "_c4",
  "d2": "_d2",
}
`;

exports[`modules option case name \`leak-scope\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".abc ._def {
  color: red;
}

._ghi ._jkl {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "abc": "_abc",
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._abc ._def {
  color: red;
}

._ghi ._jkl {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`local\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "abc": "_abc",
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules option case name \`local\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._className { background: red; }
#_someId { background: green; }
._className ._subClass { color: green; }
#_someId ._subClass { color: blue; }
",
    "",
  ],
]
`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._className { background: red; }
#_someId { background: green; }
._className ._subClass { color: green; }
#_someId ._subClass { color: blue; }
",
    "",
  ],
]
`;

exports[`modules option case name \`local-2\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules option case name \`local-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._abc {
  color: red;
}
._def {
  background: green;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._abc {
  color: red;
}
._def {
  background: green;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`local-and-composes\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules option case name \`local-and-composes\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1[data-attr=\\".c2)]'\\"]:not(._c3):not(._c4) {
  background: red;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1[data-attr=\\".c2)]'\\"]:not(._c3):not(._c4) {
  background: red;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`local-with-string\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules option case name \`local-with-string\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "small": "(max-width: 599px)",
}
`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@media (max-width: 599px) {
  .header {
    box-shadow: 0 0 4px #1F4F7F;
  }
}
",
    "",
  ],
]
`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "header": "_header",
  "small": "(max-width: 599px)",
}
`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@media (max-width: 599px) {
  ._header {
    box-shadow: 0 0 4px #1F4F7F;
  }
}
",
    "",
  ],
]
`;

exports[`modules option case name \`media\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "small": "(max-width: 599px)",
}
`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "header": "_header",
  "small": "(max-width: 599px)",
}
`;

exports[`modules option case name \`media\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c7": "_c7",
}
`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".c1 ._c2 ._c3 .c4 ._c5, .c6 ._c7 { background: red; }
.c8 { background: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c6": "_c6",
  "c7": "_c7",
  "c8": "_c8",
}
`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1 ._c2 ._c3 .c4 ._c5, ._c6 ._c7 { background: red; }
._c8 { background: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`mode-switching\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c7": "_c7",
}
`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c6": "_c6",
  "c7": "_c7",
  "c8": "_c8",
}
`;

exports[`modules option case name \`mode-switching\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a .b, .c .d, #id {
	color: green;
	font-size: 1.5pt;
}
a[href=\\"#b.c\\"].x.y {
	color: green;
	font-size: 1.5pt;
}
@keyframes z {
  2.5% {color: green;}
}
",
    "",
  ],
]
`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "d": "_d",
  "id": "_id",
  "x": "_x",
  "y": "_y",
  "z": "_z",
}
`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a ._b, ._c ._d, #_id {
	color: green;
	font-size: 1.5pt;
}
a[href=\\"#b.c\\"]._x._y {
	color: green;
	font-size: 1.5pt;
}
@keyframes _z {
  2.5% {color: green;}
}
",
    "",
  ],
]
`;

exports[`modules option case name \`simple\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `Object {}`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "d": "_d",
  "id": "_id",
  "x": "_x",
  "y": "_y",
  "z": "_z",
}
`;

exports[`modules option case name \`simple\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png);
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png#?iefix);
	background: url(\\"#hash\\");
	background: url(\\"#\\");
	background: url(data:image/png;base64,AAA);
	background: url(http://example.com/image.jpg);
	background: url(//example.com/image.png);
	background: green url(data:image/png;base64,AAA) url(http://example.com/image.jpg) url(//example.com/image.png) url(/webpack/public/path/img.png) url(\\"/webpack/public/path/img img.png\\") xyz;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "a": "_a",
}
`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png);
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png#?iefix);
	background: url(\\"#hash\\");
	background: url(\\"#\\");
	background: url(data:image/png;base64,AAA);
	background: url(http://example.com/image.jpg);
	background: url(//example.com/image.png);
	background: green url(data:image/png;base64,AAA) url(http://example.com/image.jpg) url(//example.com/image.png) url(/webpack/public/path/img.png) url(\\"/webpack/public/path/img img.png\\") xyz;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`urls\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `Object {}`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "a": "_a",
}
`;

exports[`modules option case name \`urls\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	background: red;
	background: green;
	background: red;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "a": "_a",
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	background: red;
	background: green;
	background: red;
}
",
    "",
  ],
]
`;

exports[`modules option case name \`values\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "a": "_a",
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules option case name \`values\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "
",
    "",
  ],
]
`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "
",
    "",
  ],
]
`;

exports[`modules option case name \`values-1\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules option case name \`values-1\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-2\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules option case name \`values-2\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-3\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules option case name \`values-3\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
}
`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    3,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { background: red, green, def; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ghi": "_ghi",
}
`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    3,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { background: red, green, def; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-4\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
}
`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ghi": "_ghi",
}
`;

exports[`modules option case name \`values-4\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { box-shadow: 0 0 red,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { box-shadow: 0 0 red,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-5\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules option case name \`values-5\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { box-shadow: 0 0 red ,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { box-shadow: 0 0 red ,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-6\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules option case name \`values-6\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is false): locals 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { box-shadow: 0 0 red, 0 0 red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is true): locals 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { box-shadow: 0 0 red, 0 0 red; }
",
    "",
  ],
]
`;

exports[`modules option case name \`values-7\`: (use \`loader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is false): errors 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is false): locals 1`] = `undefined`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is false): module (evaluated) 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is false): warnings 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is true): errors 1`] = `Array []`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is true): locals 1`] = `undefined`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is true): module (evaluated) 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules option case name \`values-7\`: (use \`localsLoader.js\`) (\`modules\` option is true): warnings 1`] = `Array []`;
